[gd_scene load_steps=10 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Alphakind.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Basket1.tscn" type="PackedScene" id=7]
[ext_resource path="res://Basket2.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 5
outline_color = Color( 0.964706, 0.117647, 0.117647, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 5
outline_color = Color( 0.12549, 0.117647, 0.964706, 1 )
font_data = ExtResource( 3 )

[node name="World" type="Spatial"]
script = ExtResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 7.11872, 0 )
light_energy = 0.138
light_specular = 0.481
shadow_enabled = true

[node name="ViewportContainerP1" type="ViewportContainer" parent="."]
margin_top = 2.0
margin_right = 449.0
margin_bottom = 424.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportP1" type="Viewport" parent="ViewportContainerP1"]
size = Vector2( 449, 422 )
handle_input_locally = false
render_target_update_mode = 3

[node name="CameraP1" type="Camera" parent="ViewportContainerP1/ViewportP1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7 )

[node name="TextP1" type="Button" parent="ViewportContainerP1"]
margin_right = 200.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
shortcut_in_tooltip = false
text = "DALE"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainerP2" type="ViewportContainer" parent="."]
margin_left = 543.0
margin_top = 3.0
margin_right = 983.0
margin_bottom = 434.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportP2" type="Viewport" parent="ViewportContainerP2"]
size = Vector2( 440, 431 )
handle_input_locally = false
render_target_update_mode = 3

[node name="CameraP2" type="Camera" parent="ViewportContainerP2/ViewportP2"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -7 )

[node name="TextP2" type="Button" parent="ViewportContainerP2"]
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "CHIP"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLevel" type="Button" parent="."]
anchor_right = 1.0
margin_left = -48.0
margin_top = 3.0
margin_right = 44.0
margin_bottom = 49.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.956863, 1, 0.211765, 1 )
custom_fonts/font = SubResource( 3 )
shortcut_in_tooltip = false
text = "LEVEL"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Environment" type="Spatial" parent="."]

[node name="Ground" parent="Environment" instance=ExtResource( 2 )]

[node name="branches" type="Spatial" parent="Environment"]

[node name="Basket1" parent="Environment" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.567, -1, 1 )

[node name="Basket2" parent="Environment" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.567, -1, -1 )

[node name="Players" type="Spatial" parent="."]

[node name="Player1" parent="Players" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -0.5, 1 )
collision_layer = 2
player = "p1"
playerName = "DALE"

[node name="Player2" parent="Players" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -0.5, -1 )
collision_layer = 2
player = "p2"
playerName = "CHIP"
